WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127353
AX: Mac: Expose the visible text of a password field to AX
https://bugs.webkit.org/show_bug.cgi?id=127353
Summary
AX: Mac: Expose the visible text of a password field to AX
chris fleizach
Reported
2014-01-21 09:50:22 PST
The Mac platform is now exposing the rendered visible text of password fields through accessibility. VoiceOver is able to make use of that to provide a better user experience. <
rdar://problem/15344998
>
Attachments
patch
(4.20 KB, patch)
2014-01-21 09:57 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2014-01-21 09:57:21 PST
Created
attachment 221756
[details]
patch
Brent Fulgham
Comment 2
2014-01-21 12:23:41 PST
Comment on
attachment 221756
[details]
patch r=me
chris fleizach
Comment 3
2014-01-21 12:24:17 PST
Comment on
attachment 221756
[details]
patch Thanks!
WebKit Commit Bot
Comment 4
2014-01-21 12:52:22 PST
Comment on
attachment 221756
[details]
patch Clearing flags on attachment: 221756 Committed
r162466
: <
http://trac.webkit.org/changeset/162466
>
WebKit Commit Bot
Comment 5
2014-01-21 12:52:23 PST
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 6
2014-01-21 15:58:03 PST
accessibility/password-field-value.html is failing on all bots: <
http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=accessibility%2Fpassword-field-value.html
> +CONSOLE MESSAGE: line 15: TypeError: HTMLParagraphElement is not a function (evaluating 'description("This tests that the AX exposed value of a password field is the rendered text.")')
Alexey Proskuryakov
Comment 7
2014-01-21 16:02:32 PST
Hopefully fixed in <
http://trac.webkit.org/r162482
>.
chris fleizach
Comment 8
2014-01-21 16:06:28 PST
Thanks for looking into that!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug