AX: Mac: Expose the visible text of a password field to AX https://bugs.webkit.org/show_bug.cgi?id=127353

Reviewed by Brent Fulgham.

Source/WebCore:

The Mac platform should now expose the rendered value of password fields through AX.

Test: accessibility/password-field-value.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::textLength):
(WebCore::AccessibilityRenderObject::passwordFieldValue):

LayoutTests:

* accessibility/password-field-value-expected.txt: Added.
* accessibility/password-field-value.html: Added.


Canonical link: https://commits.webkit.org/145378@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162466 268f45cc-cd09-0410-ab3c-d52691b4dbfc